@@ -10,6 +10,8 @@ python-apt (0.7.11.2) unstable; urgency=low
   * apt/cache.py:
     - Correctly handle rootdir on second and later invocations of
       open(), by calling InitSystem again. (LP: #320665).
+    - Provide broken_count, delete_count, install_count, keep_count
+      properties (Closes: #532338)
 
   [ Stefano Zacchiroli ]
   * debian/python-apt.doc-base: register the documentation with the
